http://www.nsnam.org including tutorials: http://www.nsnam.org/tutorials.html

Consult the file CHANGES.html for more detailed information about changed
API and behavior across ns-3 releases.

Release 3-dev
=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------
- IPv6 addresses and routing tables are printed in a more conventional way,
  closely matching the Linux "route -A inet6" command.
  
- new SixLowPanNetDevice model, headers and associated helpers.  The 
  SixLowPanNetDevice is able to act as a shim between IPv6 and a NetDevice, 
  compressing IPv6 headers according to RFCs 4944 and 6262.
  The SixLowPanNetDevice is meant to be used over 802.15.4 NetDevices, 
  but it can be used on other NetDevices as well (see the manual for full 
  details).

- A new wifi extension for vehicular simulation support is available in src/wave
  directory.  The current code represents an interim capability to realize an
  IEEE 802.11p-compliant device, but without the WAVE extensions (which
  are planned for a later patch).  The WaveNetDevice modelled herein enforces that
  a WAVE-compliant physical layer (at 5.9 GHz) is selected, and does not require 
  any association between devices (similar to an adhoc WiFi MAC), but is 
  otherwise similar (at this time) to a WifiNetDevice.  WAVE capabililties of 
  switching between control and service channels, or using multiple radios, are
  not yet modelled.

Bugs fixed
----------
- Bug 1778 - Implement TapBridge::IsLinkUp() function
- Bug 1777 - Implement the more direct way of "using" configuration of existing tap interface
- Bug 1776 - Improve CRC performance for CsmaNetDevice in emulation modes
- Bug 1789 - missing test condition for sigma in buildings-shadowing-test
- Bug 1798 - Changing the rate of onOffApplication might stop transmission
- Bug 1802 - FlowMon header deserialization problem with IPv4 fragments